--- a/src/app/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-form/pokemon-form.component.html
@@ -74,7 +74,7 @@
         class="w-1/2 p-1 border-2 rounded-full bg-menu-100 border-menu-400 hover:bg-menu-300"
         (click)="deletePokemonEvent.emit(formIndex)"
       >
-        <img src="../../../assets/icons/trash.svg" title="Delete" />
+        <trash-svg title="Delete"></trash-svg>
       </div>
     </div>
   </div>
