--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -58,7 +58,7 @@
         class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
       >
         Import
-        <img class="h-full" src="../../../../assets/icons/import.svg" />
+        <import-svg class="h-full"></import-svg>
       </button>
       <div class="grid gap-x-4 md:grid-cols-1 lg:grid-cols-2">
         <pokemon-form
