--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -46,16 +46,15 @@
   </div>
   <div
     *ngIf="shared"
-    class="fixed inset-0 z-30 flex flex-col items-center justify-center bg-menu-800 bg-opacity-50"
+    class="fixed inset-0 z-30 flex flex-col items-center justify-center bg-opacity-50 bg-menu-800"
   >
     <div class="w-5/6 bg-white rounded-lg shadow-lg md:w-2/3 lg:w-1/2 xl:w-1/3">
       <div class="flex justify-end w-full">
-        <img
+        <close-svg
           class="w-8 h-8 p-1 m-1 hover:p-0 hover:cursor-pointer"
           (click)="shared = false"
           alt="Close"
-          src="../../assets/icons/close.svg"
-        />
+        ></close-svg>
       </div>
       <div class="px-8">
         <h2 class="text-3xl font-bold text-center">Share your matchup</h2>
@@ -66,12 +65,11 @@
             <div class="w-auto overflow-x-auto">
               {{ shareUrl }}
             </div>
-            <img
+            <copy-svg
               class="w-8 h-8 p-1 m-1 hover:p-0 hover:cursor-pointer"
               (click)="copyToClipboard()"
               alt="Copy"
-              src="../../assets/icons/copy.svg"
-            />
+            ></copy-svg>
           </div>
         </div>
         <div class="flex-grow"></div>
@@ -112,11 +110,10 @@
                 *ngFor="let pokemon of matchupData.overview[0].team"
               >
                 <sprite [pokemon]="pokemon" [flipped]="true"></sprite>
-                <img
+                <tera-svg
                   *ngIf="pokemon.capt?.tera"
-                  src="../../assets/icons/tera.svg"
                   class="absolute top-0 left-0 w-1/3"
-                />
+                ></tera-svg>
                 <div class="absolute flex justify-center w-full -bottom-1">
                   <div
                     class="w-1/2 font-semibold text-center border rounded-full text-2xs sm:text-xs bg-menu-100 border-menu-200"
@@ -132,11 +129,10 @@
                 *ngFor="let pokemon of matchupData.overview[1].team"
               >
                 <sprite [pokemon]="pokemon"></sprite>
-                <img
+                <tera-svg
                   *ngIf="pokemon.capt?.tera"
-                  src="../../assets/icons/tera.svg"
                   class="absolute top-0 right-0 w-1/3"
-                />
+                ></tera-svg>
                 <div class="absolute flex justify-center w-full -bottom-1">
                   <div
                     class="w-1/2 font-semibold text-center border rounded-full text-2xs sm:text-xs bg-menu-100 border-menu-200"
