--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -1,7 +1,7 @@
 <form
   [formGroup]="opponentForm"
   (ngSubmit)="onSubmit()"
-  class="p-2 m-2 space-y-3 bg-bTeam-300 shadow-md team shadow-bTeam-600 rounded-xl"
+  class="p-2 m-2 space-y-3 shadow-md bg-bTeam-300 team shadow-bTeam-600 rounded-xl"
 >
   <div class="w-full">
     <div class="grid grid-cols-2 sm:grid-cols-4 gap-x-4">
@@ -11,7 +11,7 @@
           formControlName="teamName"
           spellcheck="false"
           placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 text-base text-center bg-bTeam-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
+          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
       <div>
@@ -20,7 +20,7 @@
           placeholder="Week 1"
           spellcheck="false"
           formControlName="stage"
-          class="w-full px-4 py-2 text-base text-center bg-bTeam-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
+          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
     </div>
@@ -33,7 +33,7 @@
         class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
       >
         Import
-        <img class="h-full" src="../../../../assets/icons/import.svg" />
+        <import-svg class="h-full"></import-svg>
       </button>
       <div class="grid gap-x-4 md:grid-cols-1 lg:grid-cols-2">
         <pokemon-form
