--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -17,15 +17,15 @@
   </div>
 
   <div
-    class="w-full p-1 bg-bTeam-100 border-2 border-bTeam-200 rounded-xl lg:p-2"
+    class="w-full p-1 border-2 bg-bTeam-100 border-bTeam-200 rounded-xl lg:p-2"
   >
     <div>
       <button
         [routerLink]="'new'"
-        class="p-2 m-3 bg-bTeam-300 rounded-lg shadow-md hover:shadow shadow-bTeam-600"
+        class="p-2 m-3 rounded-lg shadow-md bg-bTeam-300 hover:shadow shadow-bTeam-600"
         title="Add Matchup"
       >
-        <img src="../../../assets/icons/plus.svg" class="w-6" />
+        <div class="w-6 h-6"><plus-svg></plus-svg></div>
       </button>
       <loading *ngIf="!matchups"></loading>
       <div
@@ -35,22 +35,22 @@
       >
         <div
           *ngFor="let matchup of matchups; let i = index"
-          class="flex flex-col m-2 bg-bTeam-200 shadow-md shadow-bTeam-600 rounded-xl"
+          class="flex flex-col m-2 shadow-md bg-bTeam-200 shadow-bTeam-600 rounded-xl"
         >
-          <div class="flex-grow p-2 bg-bTeam-300 shadow-md rounded-xl">
+          <div class="flex-grow p-2 shadow-md bg-bTeam-300 rounded-xl">
             <div class="flex items-center w-full space-x-2 h-fit">
               <div
-                class="w-1/2 h-auto p-1 overflow-hidden font-semibold text-center whitespace-normal bg-bTeam-200 rounded-full shadow-inner overflow-ellipsis text-medium shadow-bTeam-600"
+                class="w-1/2 h-auto p-1 overflow-hidden font-semibold text-center whitespace-normal rounded-full shadow-inner bg-bTeam-200 overflow-ellipsis text-medium shadow-bTeam-600"
               >
                 {{ matchup.bTeam.teamName }}
               </div>
               <div
-                class="flex items-center justify-center w-1/6 p-1 overflow-hidden text-xs font-semibold whitespace-normal bg-bTeam-200 rounded-full shadow-inner h-fit overflow-ellipsis shadow-bTeam-600"
+                class="flex items-center justify-center w-1/6 p-1 overflow-hidden text-xs font-semibold whitespace-normal rounded-full shadow-inner bg-bTeam-200 h-fit overflow-ellipsis shadow-bTeam-600"
               >
                 {{ score(matchup) }}
               </div>
               <div
-                class="flex items-center justify-center w-1/3 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal bg-bTeam-200 rounded-full shadow-inner h-fit overflow-ellipsis shadow-bTeam-600"
+                class="flex items-center justify-center w-1/3 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner bg-bTeam-200 h-fit overflow-ellipsis shadow-bTeam-600"
               >
                 {{ matchup.stage }}
               </div>
@@ -67,7 +67,7 @@
             *ngIf="!matchup.deleteConfirm"
           >
             <a
-              class="flex-grow p-1 font-semibold text-center bg-bTeam-300 shadow h-fit hover:shadow shadow-bTeam-600 rounded-xl"
+              class="flex-grow p-1 font-semibold text-center shadow bg-bTeam-300 h-fit hover:shadow shadow-bTeam-600 rounded-xl"
               [routerLink]="'matchup/'"
               [queryParams]="{ id: matchup._id }"
               >View Matchup</a
@@ -75,53 +75,49 @@
             <div
               class="grid items-center justify-center grid-cols-4 gap-2 px-2"
             >
-              <img
-                class="w-8 h-8 p-1 bg-bTeam-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
+              <score-svg
+                class="w-8 h-8 p-1 shadow bg-bTeam-300 hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
                 [routerLink]="'score'"
                 [queryParams]="{ matchup: matchup._id | json }"
                 title="Score"
-                src="../../../assets/icons/score.svg"
                 alt="Score"
-              />
-              <img
-                class="w-8 h-8 p-1 bg-bTeam-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
+              ></score-svg>
+              <clock-svg
+                class="w-8 h-8 p-1 shadow bg-bTeam-300 hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
                 [routerLink]="'schedule'"
                 [queryParams]="{ matchup: matchup._id | json }"
-                src="../../../assets/icons/clock.svg"
                 title="Schedule"
                 alt="Schedule"
-              />
-              <img
-                class="w-8 h-8 p-1 bg-bTeam-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
+              ></clock-svg>
+              <edit-svg
+                class="w-8 h-8 p-1 shadow bg-bTeam-300 hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
                 [routerLink]="'edit'"
                 [queryParams]="{ matchup: matchup._id | json }"
-                src="../../../assets/icons/edit.svg"
                 title="Edit"
                 alt="Edit"
-              />
-              <img
-                class="w-8 h-8 p-1 bg-bTeam-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
-                src="../../../assets/icons/trash.svg"
+              ></edit-svg>
+              <trash-svg
+                class="w-8 h-8 p-1 shadow bg-bTeam-300 hover:shadow rounded-xl hover:cursor-pointer shadow-bTeam-600"
                 (click)="matchup.deleteConfirm = true"
                 title="Delete"
                 alt="Delete"
-              />
+              ></trash-svg>
             </div>
           </div>
           <div class="flex" *ngIf="matchup.deleteConfirm">
             <div
-              class="w-2/3 m-2 text-center bg-bTeam-300 shadow shadow-bTeam-600 rounded-xl"
+              class="w-2/3 m-2 text-center shadow bg-bTeam-300 shadow-bTeam-600 rounded-xl"
             >
               Are you sure you want to delete?
             </div>
             <div
-              class="flex items-center justify-center w-1/6 m-2 bg-bTeam-300 shadow cursor-pointer hover:shadow shadow-bTeam-600 rounded-xl"
+              class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-bTeam-300 hover:shadow shadow-bTeam-600 rounded-xl"
               (click)="deleteMatchup(matchup._id)"
             >
               Yes
             </div>
             <div
-              class="flex items-center justify-center w-1/6 m-2 bg-bTeam-300 shadow cursor-pointer hover:shadow shadow-bTeam-600 rounded-xl"
+              class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-bTeam-300 hover:shadow shadow-bTeam-600 rounded-xl"
               (click)="matchup.deleteConfirm = false"
             >
               No
