--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div
   class="flex flex-col justify-between h-dvh text-symbolColor-main bg-page"
-  [ngClass]="checkTheme()"
+  [ngClass]="theme"
 >
   <header class="z-10 flex w-full p-2 border-b-2 bg-menu-300 border-menu-400">
     <div class="relative flex">
