fix colors and planner icon

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center w-full h-full px-6 py-8">
   <div class="flex items-center justify-center w-full mb-6 h-1/6 md:h-1/4">
     <h1
-      class="hidden p-1 text-5xl font-semibold lg:text-6xl md:block text-deoxys-red font-nasa w-fit"
+      class="hidden p-1 text-5xl font-semibold lg:text-6xl md:block text-deoxys-accent font-nasa w-fit"
     >
       POKEМON
     </h1>
@@ -12,12 +12,12 @@
     />
     <div class="space-y-0">
       <h1
-        class="px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-deoxys-red font-nasa w-fit"
+        class="px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-deoxys-accent font-nasa w-fit"
       >
         POKEМON
       </h1>
       <h1
-        class="order-3 px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-deoxys-cyan font-nasa w-fit"
+        class="order-3 px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-deoxys-main font-nasa w-fit"
       >
         DRAFTZONE
       </h1>
