red was still too red

--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -77,9 +77,11 @@
         </div>
       </div>
       <button (click)="addMatch()">
-        <plus-svg
+        <div
           class="h-8 p-1 border rounded max-w-8 min-w-8 border-menu-500 bg-menu-100 hover:bg-menu-150 hover:cursor-pointer"
-        ></plus-svg>
+        >
+          <plus-svg></plus-svg>
+        </div>
       </button>
     </div>
 
