basic settings page laid out

--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -20,7 +20,7 @@
           formControlName="teamName"
           spellcheck="false"
           placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-4 py-2 text-base text-center placeholder:text-symbolColor-sub rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         />
       </div>
       <div>
