--- a/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
+++ b/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
@@ -24,7 +24,7 @@
         ></close-svg>
       </div>
       <div
-        class="absolute right-0 w-32 p-1 mt-2 bg-white border divide-y rounded-md shadow-lg z-5000"
+        class="absolute right-0 w-32 p-1 mt-2 bg-menu-100 border divide-y rounded-md shadow-lg z-5000"
         *ngIf="showFilter"
       >
         <div
