--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div
   class="flex flex-col justify-between h-dvh text-symbolColor-main bg-page"
-  [ngClass]="theme"
+  [ngClass]="getTheme()"
 >
   <header class="z-10 flex w-full p-2 border-b-2 bg-menu-300 border-menu-400">
     <div class="relative flex">
@@ -26,7 +26,7 @@
       <div
         *ngIf="menuDropdown"
         (click)="menuDropdown = false"
-        class="absolute left-0 flex-col block p-2 bg-white border divide-y rounded-md shadow-md border-menu-200 sm:flex top-full"
+        class="absolute left-0 flex-col block p-2 bg-menu-100 border divide-y rounded-md shadow-md border-menu-200 sm:flex top-full"
       >
         <div
           routerLink="/draft"
@@ -91,19 +91,30 @@
         <ng-container *ngIf="auth.isAuthenticated() | async; else loggedOut">
           <div
             *ngIf="auth.user() | async as user"
-            class="flex h-8 px-2 py-1 rounded-lg hover:bg-menu-200 hover:cursor-pointer"
+            class="flex flex-col h-8"
             (click)="userDropdown = !userDropdown"
           >
-            <div class="flex items-center h-full space-x-2">
+            <div
+              class="flex items-center rounded-lg px-2 py-1 hover:bg-menu-200 hover:cursor-pointer h-full space-x-2"
+            >
               <img src="{{ user.picture }}" class="h-full rounded-full" />
               <div>{{ user.name }}</div>
             </div>
-          </div>
-          <div
-            *ngIf="userDropdown"
-            class="px-2 py-1 rounded-lg hover:bg-menu-200 hover:cursor-pointer"
-          >
-            <button (click)="auth.logout()">Log out</button>
+            <div
+              *ngIf="userDropdown"
+              class="p-1 overflow-visible rounded-b bg-menu-300"
+            >
+              <div
+                class="px-2 py-1 rounded-lg hover:bg-menu-200 hover:cursor-pointer"
+              >
+                <button routerLink="/settings">Settings</button>
+              </div>
+              <div
+                class="px-2 py-1 rounded-lg hover:bg-menu-200 hover:cursor-pointer"
+              >
+                <button (click)="auth.logout()">Log out</button>
+              </div>
+            </div>
           </div>
         </ng-container>
 
