--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="results.length > 0"
-  class="absolute z-20 mt-0 bg-white border border-menu-300 rounded-md shadow-lg w-fit max-w-96"
+  class="absolute z-20 mt-0 bg-menu-100 rounded-b-lg shadow-lg w-fit max-w-96"
 >
   <ul class="overflow-y-auto max-h-48">
     <li
