--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="flex items-start justify-end w-fit">
       <button
-        class="px-3 py-2 text-sm text-white rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
+        class="px-3 py-2 text-sm text-symbolColor-main rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
         (click)="shared = true"
       >
         Share
@@ -48,7 +48,9 @@
     *ngIf="shared"
     class="fixed inset-0 z-30 flex flex-col items-center justify-center bg-opacity-50 bg-menu-800"
   >
-    <div class="w-5/6 bg-white rounded-lg shadow-lg md:w-2/3 lg:w-1/2 xl:w-1/3">
+    <div
+      class="w-5/6 bg-menu-100 rounded-lg shadow-lg md:w-2/3 lg:w-1/2 xl:w-1/3"
+    >
       <div class="flex justify-end w-full">
         <close-svg
           class="w-8 h-8 p-1 m-1 hover:p-0 hover:cursor-pointer"
