--- a/src/app/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-form/pokemon-form.component.html
@@ -10,16 +10,18 @@
     ></sprite>
     <div class="relative col-span-6 sm:col-span-4">
       <label class="p-1 font-semibold">Name</label>
-      <input
-        formControlName="name"
-        spellcheck="false"
-        class="w-full px-4 py-1 mx-1 rounded-full bg-menu-100 text-medium"
-        (keyup.enter)="this.addPokemonEvent.emit()"
-      />
-      <filter
-        [query]="pokemonForm.value.name"
-        (querySelected)="resultSelected($event)"
-      ></filter>
+      <div class="w-full px-4 py-1 mx-1 rounded-full bg-menu-100 text-medium">
+        <input
+          formControlName="name"
+          spellcheck="false"
+          class="w-full px-1 rounded-full bg-menu-100 focus:outline-none"
+          (keyup.enter)="this.addPokemonEvent.emit()"
+        />
+        <filter
+          [query]="pokemonForm.value.name"
+          (querySelected)="resultSelected($event)"
+        ></filter>
+      </div>
       <div
         *ngIf="
           pokemonForm.get('name')?.touched && pokemonForm.get('name')?.invalid
