--- a/src/styles.css
+++ b/src/styles.css
@@ -59,18 +59,18 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: theme("colors.slate.100");
+    background: hsl(var(--twc-menu-100) / var(--twc-menu-100-opacity, var(--tw-bg-opacity)));
     border-radius: 100vh;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: theme("colors.slate.300");
+    background: hsl(var(--twc-menu-300) / var(--twc-menu-300-opacity, var(--tw-bg-opacity)));
     border-radius: 100vh;
-    border: 2px solid theme("colors.slate.100");
+    border: 2px solid hsl(var(--twc-menu-100) / var(--twc-menu-100-opacity, var(--tw-bg-opacity)));
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: theme("colors.slate.350");
-    border: 1px solid theme("colors.slate.100");
+    background: hsl(var(--twc-menu-400) / var(--twc-menu-400-opacity, var(--tw-bg-opacity)));
+    border: 1px solid hsl(var(--twc-menu-100) / var(--twc-menu-100-opacity, var(--tw-bg-opacity)));
   }
 }
