--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,23 +1,32 @@
 <div class="flex w-full justify-center h-full p-8">
   <div
-    class="border-2 border-menu-300 rounded-lg w-full h-full max-w-128 flex flex-col items-center"
+    class="border-2 border-menu-300 overflow-y-auto rounded-lg w-full h-full max-w-128 flex flex-col items-center"
+    [formGroup]="settingsForm"
   >
-    <h1 class="font-bold text-3xl py-4">Settings</h1>
-    <div class="space-y-1">
-      <label class="block mb-1 font-bold">Theme</label>
-      <select class="bg-menu-100" [(ngModel)]="settingsData.theme">
-        <option *ngFor="let theme of themes" value="{{ theme.id }}">
-          {{ theme.name }}
-        </option>
-      </select>
-
-      <label class="block mb-1 font-bold">Colorblind Mode</label>
-      <select class="bg-menu-100" [(ngModel)]="settingsData.colorblind">
-        <option *ngFor="let colors of colorblind" value="{{ colors.id }}">
-          {{ colors.name }}
-        </option>
-      </select>
+    <h1 class="font-bold text-3xl py-6">Settings</h1>
+    <div class="space-y-4">
+      <div>
+        <label class="block mb-1 font-bold">Light/Dark Mode</label>
+        <select
+          class="bg-menu-100 border border-menu-200 rounded p-1"
+          formControlName="ldMode"
+        >
+          <option value="device">Device</option>
+          <option value="light">Light</option>
+          <option value="dark">Dark</option>
+        </select>
+      </div>
+      <div>
+        <label class="block mb-1 font-bold">Theme</label>
+        <select
+          class="bg-menu-100 border border-menu-200 rounded p-1"
+          formControlName="theme"
+        >
+          <option *ngFor="let theme of themes" value="{{ theme.id }}">
+            {{ theme.name }}
+          </option>
+        </select>
+      </div>
     </div>
-    <!-- {{ settingsData | json }} -->
   </div>
 </div>
