--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -27,6 +27,18 @@
           </option>
         </select>
       </div>
+      <div>
+        <label class="block mb-1 font-bold">Sprite Set</label>
+        <select
+          class="bg-menu-100 border border-menu-200 rounded p-1"
+          formControlName="spriteSet"
+        >
+          <option value="home">Pokemon Home</option>
+          <option value="bw">Pokemon Showdown - BW</option>
+          <option value="serebii">Serebii</option>
+        </select>
+      </div>
     </div>
+    {{ settingsForm.value | json }}
   </div>
 </div>
