--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,14 +1,14 @@
 <div class="flex w-full justify-center h-full p-8">
   <div
-    class="border-2 border-menu-300 overflow-y-auto rounded-lg w-full h-full max-w-128 flex flex-col items-center"
+    class="border-2 border-menu-300 bg-menu-100 overflow-y-auto rounded-lg w-full h-full max-w-128 flex flex-col items-center"
     [formGroup]="settingsForm"
   >
     <h1 class="font-bold text-3xl py-6">Settings</h1>
-    <div class="space-y-4">
-      <div>
+    <div class="space-y-2">
+      <div class="p-1">
         <label class="block mb-1 font-bold">Light/Dark Mode</label>
         <select
-          class="bg-menu-100 border border-menu-200 rounded p-1"
+          class="bg-menu-200 border border-menu-200 rounded p-1"
           formControlName="ldMode"
         >
           <option value="device">Device</option>
@@ -16,21 +16,25 @@
           <option value="dark">Dark</option>
         </select>
       </div>
-      <div>
+      <div class="p-1">
         <label class="block mb-1 font-bold">Theme</label>
         <select
-          class="bg-menu-100 border border-menu-200 rounded p-1"
+          class="bg-gradient-to-r from-aTeam-100 to-bTeam-100 border border-menu-200 rounded p-1"
           formControlName="theme"
         >
-          <option *ngFor="let theme of themes" value="{{ theme.id }}">
+          <option
+            class="bg-menu-200"
+            *ngFor="let theme of themes"
+            value="{{ theme.id }}"
+          >
             {{ theme.name }}
           </option>
         </select>
       </div>
-      <div>
+      <div class="p-1">
         <label class="block mb-1 font-bold">Sprite Set</label>
         <select
-          class="bg-menu-100 border border-menu-200 rounded p-1"
+          class="bg-menu-200 border border-menu-200 rounded p-1"
           formControlName="spriteSet"
         >
           <option value="home">Pokemon Home</option>
@@ -39,6 +43,6 @@
         </select>
       </div>
     </div>
-    {{ settingsForm.value | json }}
+    <!-- {{ settingsForm.value | json }} -->
   </div>
 </div>
