better dark menu colors

--- a/src/app/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/matchup-overview/matchup/typechart/typechart.component.html
@@ -75,7 +75,7 @@
       <tfoot id="typeSum" class="bg-menu-300">
         <tr>
           <th
-            class="text-xs border border-r-2 bg-scale-negative-3 border-menu-400"
+            class="text-xs border border-r-2 bg-scale-negative-3 text-scale-negative-text border-menu-400"
           >
             Weaks
           </th>
@@ -89,7 +89,7 @@
         </tr>
         <tr>
           <th
-            class="text-xs border border-r-2 bg-scale-positive-3 border-menu-400"
+            class="text-xs border border-r-2 bg-scale-positive-3 text-scale-positive-text border-menu-400"
           >
             Resists
           </th>
@@ -103,7 +103,7 @@
         </tr>
         <tr>
           <th
-            class="text-xs bg-gradient-to-r from-scale-negative-3 from-50% to-scale-positive-3 to-50% border border-menu-400 border-r-2"
+            class="text-xs bg-gradient-to-r from-scale-negative-2 from-50% to-scale-positive-2 to-50% border text-scale-positive-text border-menu-400 border-r-2"
           >
             Diff
           </th>
