--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -5,7 +5,7 @@
     <div class="w-fit">
       <button
         routerLink="/draft/{{ leagueId }}"
-        class="px-3 py-2 text-sm text-white rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
+        class="px-3 py-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
       >
         Back
       </button>
@@ -14,30 +14,30 @@
     <div class="flex justify-center flex-grow">
       <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-x-8">
         <div class="w-full text-center sm:w-auto">
-          <p class="text-sm font-semibold text-menu-500">League Name</p>
+          <p class="text-sm font-semibold text-symbolColor-sub">League Name</p>
           <p class="text-xl font-bold">{{ matchupData.leagueName }}</p>
         </div>
         <div class="w-full text-center sm:w-auto">
-          <p class="text-sm font-semibold text-menu-500">Stage</p>
+          <p class="text-sm font-semibold text-symbolColor-sub">Stage</p>
           <p class="text-xl font-bold">{{ matchupData.stage }}</p>
         </div>
         <div class="w-full text-center sm:w-auto">
-          <p class="text-sm font-semibold text-menu-500">Ruleset</p>
+          <p class="text-sm font-semibold text-symbolColor-sub">Ruleset</p>
           <p class="text-xl font-bold">{{ matchupData.ruleset }}</p>
         </div>
         <div class="w-full text-center sm:w-auto">
-          <p class="text-sm font-semibold text-menu-500">Format</p>
+          <p class="text-sm font-semibold text-symbolColor-sub">Format</p>
           <p class="text-xl font-bold">{{ matchupData.format }}</p>
         </div>
         <div *ngIf="timeString" class="w-full text-center sm:w-auto">
-          <p class="text-sm font-semibold text-menu-500">Game Time</p>
+          <p class="text-sm font-semibold text-symbolColor-sub">Game Time</p>
           <p class="text-xl font-bold">{{ timeString }}</p>
         </div>
       </div>
     </div>
     <div class="flex items-start justify-end w-fit">
       <button
-        class="px-3 py-2 text-sm text-symbolColor-main rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
+        class="px-3 py-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
         (click)="shared = true"
       >
         Share
