--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -3,14 +3,14 @@
   <div class="flex px-2 w-fleft-px">
     <button
       [routerLink]="'/draft/' + teamId"
-      class="p-2 font-medium text-white rounded-md shadow-sm bg-menu-500 hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
+      class="p-2 font-medium text-symbolColor-inverted rounded-md shadow-sm bg-menu-500 hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
     >
       Cancel
     </button>
     <div class="flex-grow"></div>
     <button
       type="submit"
-      class="p-2 font-medium text-white rounded-md shadow-sm bg-menu-500 hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
+      class="p-2 font-medium text-symbolColor-inverted rounded-md shadow-sm bg-menu-500 hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
       (click)="submit()"
     >
       Submit
