fix bugs and update news

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -49,8 +49,33 @@
     <div
       class="flex-grow w-full px-8 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-menu-300 border-menu-400"
     >
-      <h1 class="pb-2 text-2xl font-bold">News and Updates</h1>
+      <h2 class="pb-2 text-2xl font-bold">News and Updates</h2>
       <ul class="space-y-3">
+        <li>
+          <h2 class="text-xl font-semibold">July 8th, 2024</h2>
+          <h3 class="pl-4">
+            <div class="font-semibold">
+              New customization settings! Click your username in the top right
+              corner to access the settings menu. All of the listed featues can
+              be changed there.
+            </div>
+            <ul class="ml-5 list-disc">
+              <li>
+                Dark Mode: You can now use DraftZone in your bed without burning
+                your eyes.
+              </li>
+              <li>
+                Themes: A colorblind-friendly grayscale theme has been added and
+                more fun themes are planned to come. Also unlock a secret hidden
+                theme if you're lucky enough.
+              </li>
+              <li>
+                Sprite Sets: Used to seeing Pokemon Showdown's sprites? Now you
+                can change between a few options of sprites. Also more to come.
+              </li>
+            </ul>
+          </h3>
+        </li>
         <li>
           <h2 class="text-xl font-semibold">July 3rd, 2024</h2>
           <h3 class="pl-4">
